...
                android:layout_height="@dimen/tab_grid_favicon_size"
                android:minWidth="8dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_omnibox_page"/>
            <TextView
                android:id="@+id/tab_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tab_favicon"
                android:layout_marginEnd="32dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
...
                android:layout_margin="8dp"
                android:elevation="4dp"
                android:visibility="gone"
                style="@style/SearchShortcutChip" />
        </RelativeLayout>
        <org.chromium.ui.widget.ChromeImageView
            android:id="@+id/action_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_gravity="end"
            android:tint="@color/default_icon_color"/>
    </FrameLayout>
...
