<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<org.chromium.chrome.browser.tasks.tab_management.TabListRecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:visibility="invisible"/>

