...
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.TextMedium.Primary.Light" />

        <org.chromium.ui.widget.ButtonCompat
            android:id="@+id/snackbar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            style="@style/TextButton" />
...
